# HealingSystem

./: .coverage  .pre-commit-config.yaml  Dockerfile  README.md  bandit-report.json  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
PhoenixDT/: INSTALL.md  pyproject.toml  requirements.txt
PhoenixDT/configs/: config.yaml
PhoenixDT/deployment/docker/: Dockerfile  prometheus.yml
PhoenixDT/scripts/: setup.sh
PhoenixDT/src/phoenixdt/: main.py
PhoenixDT/src/phoenixdt/core/: config.py
PhoenixDT/src/phoenixdt/ml/: anomaly_detector.py  causal_inference.py  failure_synthesizer.py
PhoenixDT/src/phoenixdt/simulation/: motor_simulator.py
configs/: config.yaml
deployment/docker/: Dockerfile  docker-compose.yml  prometheus.yml
deployment/k8s/: phoenixdt-deployment.yaml
src/phoenix_dt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/phoenixdt/: __init__.py  _version.py  cli.py
src/phoenixdt/api/: __init__.py  app.py
src/phoenixdt/control/: rl_controller.py
src/phoenixdt/core/: __init__.py  causal_engine.py  config.py  digital_twin.py  neural_architectures.py  physics_engine.py  quantum_engine.py
src/phoenixdt/dashboard/: app.py
src/phoenixdt/interfaces/: opcua_server.py
src/phoenixdt/shared/: __init__.py  utils.py
src/phoenixdt/simulation/: motor_simulator.py
tests/: test_control.py  test_ml.py  test_phoenixdt.py  test_simulation.py
tests/integration/: __init__.py  test_system_integration.py
tests/performance/: locustfile.py
