# PhoenixDT - Apple/Tesla Grade Quantum Industrial Digital Twin

[build-system]
requires = ["setuptools>=70.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-dt"
dynamic = ["version"]
description = "Apple/Tesla-grade quantum-enhanced industrial digital twin with predictive self-healing AI"
authors = [
    {name = "Ankit Karki", email = "karkiankit101@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Industrial Automation",
]
keywords = [
    "digital-twin", 
    "quantum-computing", 
    "industrial-ai", 
    "predictive-maintenance", 
    "self-healing", 
    "anomaly-detection", 
    "causal-inference",
    "neural-architecture-search",
    "apple-tesla-grade"
]
dependencies = [
    # Core Scientific Computing
    "numpy>=1.26.0",
    "scipy>=1.13.0", 
    "pandas>=2.2.0",
    
    # Quantum & ML Frameworks
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "scikit-learn>=1.5.0",
    
    # Advanced ML
    "stable-baselines3>=2.3.0",
    "gymnasium>=0.29.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    
    # Causal Inference
    "dowhy>=0.12.0",
    "econml>=0.14.0",
    "causalml>=0.14.0",
    "networkx>=3.2.1",
    
    # Industrial Communication
    "opcua-asyncio>=1.0.0",
    "pymodbus>=3.6.0",
    
    # Web Framework & API
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    
    # Visualization & Dashboard
    "plotly>=5.22.0",
    "rich>=13.8.0",
    "typer>=0.12.0",
    
    # Utilities & Monitoring
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "psutil>=6.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing & Quality
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0", 
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "coverage>=7.6.0",
    
    # Code Quality & Formatting
    "black>=24.8.0",
    "isort>=5.13.0", 
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    
    # Security
    "bandit>=1.7.5",
    "safety>=3.0.0",
]
monitoring = [
    # Metrics & Observability
    "prometheus-client>=0.20.0",
    "grafana-api>=1.0.3",
]
deployment = [
    # Container Orchestration
    "kubernetes>=30.0.0",
    "helm>=3.14.0",
    "docker>=6.1.0",
]
ml = [
    # Advanced Machine Learning
    "ray[rllib]>=2.30.0",
    "optuna>=3.5.0",
    "hyperopt>=0.2.7",
]
all = [
    "phoenix-dt[dev,monitoring,deployment,ml]",
]

[project.urls]
Homepage = "https://github.com/Ankit-x1/HealingSystem"
Repository = "https://github.com/Ankit-x1/HealingSystem"
Documentation = "https://github.com/Ankit-x1/HealingSystem/docs"
"Bug Tracker" = "https://github.com/Ankit-x1/HealingSystem/issues"
"Source Code" = "https://github.com/Ankit-x1/HealingSystem/tree/main"

[project.scripts]
phoenixdt = "phoenixdt.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/phoenixdt/_version.py"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["phoenixdt"]
force_single_line = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "torch.*", 
    "stable_baselines3.*",
    "gymnasium.*",
    "dowhy.*",
    "plotly.*",
    "opcua.*",
    "networkx.*",
    "scipy.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "S",  # flake8-bandit
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S311",  # random module usage (allowed)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=phoenixdt",
    "--cov-report=html", 
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config", 
    "--asyncio-mode=auto",
    "-v"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "quantum: marks tests involving quantum features",
    "performance: marks performance tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
]
branch = true
fail_under = 90

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]