[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-dt"
version = "0.1.0"
description = "Failure-Aware Digital Twin with Anomaly Synthesis & Self-Healing Control"
authors = [
    {name = "Ankit Karki", email = "karkiankit101@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.28.0",
    "dowhy>=0.11.0",
    "asyncua>=1.0.0",
    "streamlit>=1.25.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
dashboard = [
    "plotly>=5.15.0",
    "dash>=2.11.0",
    "bokeh>=3.2.0",
]
deployment = [
    "prometheus-client>=0.17.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/Ankit-x1/HealingSystem"
Repository = "https://github.com/Ankit-x1/HealingSystem"
Documentation = "https://github.com/Ankit-x1/HealingSystem/docs"

[project.scripts]
phoenixdt = "phoenixdt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=phoenixdt --cov-report=html --cov-report=term-missing"